fix crash when navigating in an empty document

BUG: 274280